--- a/terms/index.html
+++ b/terms/index.html
@@ -61,7 +61,7 @@
         <h2>2. How to Opt-In</h2>
         <p>You provide consent to receive messages by:</p>
         <ul>
-            <li>Texting any message to our toll-free number: 1-855-XXX-XXXX</li>
+            <li>Texting any message to our toll-free number: 1-833-933-1808</li>
             <li>Texting keywords such as "ALOHA", "START", "HELP", or any question about Kauai</li>
         </ul>
         <p>Your initial text message serves as your consent to receive automated replies from our service.</p>
